# Drum_Isolator

./: .gitattributes  .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt  vcpkg.json
cpp/include/: audio_reader.h  constants.h  inference_engine.h  ring_buffer.h
cpp/src/: audio_reader.cpp  inference_engine.cpp  main.cpp
python/: dataset.py  demo_mir_yt.py  embed_onnx_sidecar.py  export.py  kaggle_train.py  model.py  requirements.txt  test_mock_forward.py  train.py  verify_models.py
